# servefs

./: .gitignore  DEVELOP.md  GALLERY.md  MANIFEST.in  Makefile  README.md  README_EN.md  pyproject.toml
.github/workflows/: poetry.yml
servefs/: cli.py  config.py  main.py
servefs/middleware/: auth.py
servefs/routes/: api.py  page.py
servefs/static/: index.html
servefs/static/css/: style.css
servefs/static/js/: index.js  main.js
simplehttpserver/: cli.py  main.py
simplehttpserver/routes/: api.py
simplehttpserver/static/: index.html
tests/: conftest.py  test_cli.py
